<resources>
    <string name="app_name">"Kore.ai Bot"</string>
    <string name="socket_connecting">Connecting</string>
    <string name="socket_connected">Connected</string>
    <string name="socket_disconnected">Disconnected</string>
    <string name="socket_failed">Failed to connect</string>
    <string name="send">"Send"</string>
    <string name="please_wait">"Please wait…"</string>
    <string name="speak_now">"Speak now"</string>
    <string name="no_network">"No network!"</string>
    <string name="click_hear_to_enter_text">click hear to enter text</string>
    <string name="click_hear_to_speak_something">click hear to speak something</string>
    <string name="tap_to_speak">Tap microphone to speak</string>
    <string name="listening_tap_end">Listening.. Tap to end</string>
    <string name="tap_to_send">Tap to send</string>
    <string name="repeat">Please repeat</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="speech_not_available">Speech recognition is not available on this device. Do you want to install Google app to have speech recognition?</string>
    <string name="permission_required">You need to grant the permission to use the microphone</string>
    <string name="enable_google_voice_typing">Please enable Google Voice Typing to use speech recognition!</string>
    <string name="label_to">To</string>
    <string name="label_from">From</string>
    <string name="label_cc">Cc</string>
    <string name="atatchment_format">%d Attachments</string>
    <plurals name="attachment_count">
        <item quantity="one">1 Attachment </item>
        <item quantity="other">%d  Attachments</item>
    </plurals>
    <string name="sortable_indicator_content_description">Sortable Indicator</string>
    <string name="default_header">Header %1$d</string>
    <string name="default_cell">Data [%1$d:%2$d]</string>
    <string name="modify_slots">MODIFY SLOTS</string>
    <string name="confirm">Confirm</string>
    <string name="need_login">You’d need to login to view the content</string>
    <string name="conversation_end">Conversation ended at</string>
    <plurals name="confirm_slots">
        <item quantity="one">Confirm availability for 1 slot</item>
        <item quantity="other">Confirm availability for %d slots</item>
    </plurals>
    <string name="selected_task_completion">%1$d out of %2$d tasks are selected for completion</string>
    <string name="selected_task_duedate">%1$d out of %2$d tasks are selected for change due date</string>
    <string name="view_more">View more</string>
    <string name="chase_digital_assistantSM"><![CDATA[Chase Digital Assistant<sup><small>SM</small></sup>]]></string>
    <string name="icon_e91d">&#xe91d;</string>
    <string name="icon_e915">&#xe915;</string>
    <string name="icon_e979">&#xe979;</string>
    <string name="icon_e961">&#xe961;</string>
    <string name="icon_e914">&#xe914;</string>
    <string name="icon_e92c">&#xe92c;</string>
    <string name="icon_e94f">&#xe94f;</string>
    <string name="icon_e94e">&#xe94e;</string>
    <string name="icon_62">&#x62;</string>
    <string name="icon_e959">&#xe959;</string>
    <string name="icon_33">&#x33;</string>
    <string name="icon_d">&#xd;</string>
    <string name="icon_e96c">&#xe96c;</string>
    <string name="icon_e927">&#xe927;</string>
    <string name="icon_e926">&#xe926;</string>
    <string name="icon_e943">&#xe943;</string>
    <string name="icon_64">&#xe64;</string>
    <string name="icon_2d">&#x2d;</string>
    <string name="icon_e954">&#xe954;</string>
    <string name="icon_e92a">&#xe92a;</string>
    <string name="icon_e958">&#xe958;</string>
    <string name="icon_e935">&#xe98a;</string>
    <string name="icon_e922">&#xe922;</string>
    <string name="icon_e903">&#xe903;</string>
    <string name="icon_e93c">&#xe93c;</string>
    <string name="icon_28">&#x28;</string>
    <string name="icon_e91a">&#xe91a;</string>
    <string name="icon_e913">&#xe913;</string>
    <string name="camera">&#128247;</string>
    <string name="video">&#127909;</string>
    <string name="attachment">&#128195;</string>
    <string name="audio">&#9835;</string>
    <string name="icon_e995">&#xe995;</string>
    <string name="icon_e996">&#xe996;</string>
    <string name="read_more"><![CDATA[<u> Read More </u>]]></string>
    <string name="show_less"><![CDATA[<u> Show Less </u>]]></string>
    <string name="border0">
        <![CDATA[
        <style>
        p.dashed {border-style: dashed;}
        </style>
        <body>
        <p class=“+”dashed“+”>A dashed border.</p>
        </body>
        ]]>
    </string>
    <string name="border1">
    <![CDATA[
        <div style=“display: inline-block;margin-bottom: 4px;border: 1px solid;padding-left: 4px;border-radius: 6px;border-style: dashed;”>Sushanth</div>
     ]]>
    </string>
    <string name="save">Save</string>
    <string name="connect">Connect</string>
    <string name="whatcanbeimproved">What can be Improved ?</string>
    <string name="submit">Submit</string>
    <string name="show_more">Show More</string>
    <string name="about">About</string>
    <string name="add_suggestions">Add Suggestions</string>
    <string name="get_started">Get Started</string>
    <string name="see_all_results">See all results</string>
    <string name="more">More</string>
    <string name="download">Download</string>
    <string name="nodata">No Data</string>
    <string name="no_upcoming_meetings">No Upcoming Meetings</string>
    <string name="no_files">No Files</string>
    <string name="you">You</string>
    <string name="view_less">View less</string>
    <string name="message">Message…</string>
    <string name="schedue_meeting">schedue meeting</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_kore_ai_bot_support">Welcome to Kore.ai\nBot Support</string>
    <string name="our_community_is_ready_to_help_you_to_join_our_best_platform">Our community is ready to help you to join our best platform</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="links">Links</string>
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="ask_for_help">Ask for help</string>
    <string name="hi">hi</string>
    <string name="cancel">Cancel</string>
    <string name="select_all">Select All</string>
    <string name="select">Select</string>
    <string name="done">Done</string>
    <string name="loading_data">Please wait…</string>
    <string name="attachment_upload_photo">Upload Photo</string>
    <string name="attachment_upload_video">Upload Video</string>
    <string name="attachment_upload_document">Upload Document</string>
    <string name="attachment_capture_photo">Capture Photo</string>
    <string name="attachment_capture_video">Capture Video</string>
    <string-array name="attachments_strings">
        <item>@string/attachment_capture_photo</item>
        <item>@string/attachment_capture_video</item>
        <item>@string/attachment_upload_photo</item>
        <item>@string/attachment_upload_video</item>
        <item>@string/attachment_upload_document</item>
    </string-array>
    <string name="login_textview_username_text">User Name:</string>
    <string name="login_textview_password_text">Password:</string>
    <string name="login_textview_displayname_text">Display Name:</string>
    <string name="login_textview_domain_text">Domain:</string>
    <string name="login_textview_sipaddress_text">Sip Address:</string>
    <string name="login_textview_port_text">Port:</string>
    <string name="login_textview_transport_text">Transport Type:</string>
    <string name="login_textview_turnserver_text">Turn Server:</string>
    <string name="login_textview_stunserver_text">Stun Server:</string>
    <string name="oauth_error">OAuth failed</string>
    <string name="login_textview_oauth_error">Your login has expired, please login again</string>
    <string name="login_checkbox_oauth_text">OAuth enable</string>
    <string name="login_textview_oauth_url_text">OAuth url</string>
    <string name="login_textview_oauth_realm_text">OAuth realm</string>
    <string name="login_textview_oauth_clientid_text">OAuth client id</string>
    <string name="login_checkbox_autologin_text">Autologin (false = click to call)</string>
    <string name="login_checkbox_call_disconnect_text">Disconnect on broken call</string>
    <string name="login_checkbox_push_text">Use push for incoming calls</string>
    <string name="login_checkbox_video_hardware_text">Video hardware (H264)</string>
    <string name="login_button_login_text">Login</string>
    <string name="login_button_start_text">Start</string>
    <string name="login_button_advanced_text">Advanced</string>
    <string name="login_textview_second_call_text">Second call</string>
    <string name="login_textview_transfer_call_text">Transfer call</string>
    <string name="notification_text_prefix">Client is </string>
    <string name="notification_text_connected">CONNECTED</string>
    <string name="notification_text_disconnected">DISCONNECTED</string>
    <string name="notification_text_in_call">In call</string>
    <string name="settings_button_general">General</string>
    <string name="settings_button_account">Account</string>
    <string name="settings_button_call_stats">Call stats</string>
    <string name="permission_denied_button_text">Some of the application\’s permissions have been rejected.\nThe application may not function properly until they are all granted.\nPlease either choose to manually change the permission or continue with the current state anyway.</string>
    <string name="permission_denied_button_continue">Continue</string>
    <string name="permission_denied_button_edit">Edit</string>
    <string name="general_settings_textview_dtmf_type_text">DTMF type:</string>
    <string name="general_settings_textview_log_level_type_text">Log level:</string>
    <string name="general_settings_textview_auto_redirect_text">Auto redirect:</string>
    <string name="general_settings_textview_redirect_call_text">Redirect call:</string>
    <string name="general_settings_button_save_text">Save</string>
    <string name="incoming_video_call">Incoming video call…</string>
    <string name="incoming_audio_call">Incoming audio call…</string>
    <string name="account_textview_status_prefix">Status:</string>
    <string name="account_textview_status_connected">CONNECTED</string>
    <string name="account_textview_status_disconnected">DISCONNECTED</string>
    <string name="call_stats_textview_stats_title">Call Statistics</string>
    <string name="call_stats_textview_packets_received_header">Packets received:</string>
    <string name="call_stats_textview_bytes_received_header">Bytes received:</string>
    <string name="call_stats_textview_packets_lost_header">Packets Lost:</string>
    <string name="call_stats_textview_jitter_header">Jitter:</string>
    <string name="call_stats_textview_fraction_lost_header">Fraction Lost:</string>
    <string name="call_button_mute">Mute</string>
    <string name="call_button_switch_camera">camera</string>
    <string name="call_button_dtmf">DTMF</string>
    <string name="call_button_hold">Hold</string>
    <string name="call_button_switch_call">Switch</string>
    <string name="call_button_end_call">End</string>
    <string name="chat_contact">Contact:</string>
    <string name="chat_message">Message:</string>
    <string name="chat_last_message_contact">from:</string>
    <string name="chat_last_message_text">Message:</string>
    <string name="chat_send">Send</string>
    <string name="agent_name">Agent Name</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="send_again">Send again</string>
    <string name="sending_failed">"Sending failed. "</string>
    <string name="or"> or </string>
    <string name="delete">Delete</string>
</resources>