<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    style="@style/SettingsLayoutStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:id="@+id/settings_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/settings_button_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_general"/>
        <Button
            android:id="@+id/settings_button_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_account"/>
        <Button
            android:id="@+id/settings_button_call_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_call_stats"/>
    </LinearLayout>
</LinearLayout>
