<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/call_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/call_layout_ac_webrtc_video"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/call_button_mute"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/call_button_background_xml"
                app:srcCompat="@mipmap/call_button_icon_mute"
                android:text="@string/call_button_mute" />

            <ImageView
                android:id="@+id/call_button_switch_camera"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/call_button_background_xml"
                app:srcCompat="@mipmap/call_button_icon_switch_video"
                android:text="@string/call_button_switch_camera" />

            <ImageView
                android:id="@+id/call_button_dtmf"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/call_button_background_xml"
                app:srcCompat="@mipmap/call_button_icon_dialpad"
                android:text="@string/call_button_dtmf" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/endlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/call_button_hold"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/call_button_background_xml"
                app:srcCompat="@mipmap/call_button_icon_hold"
                android:text="@string/call_button_hold" />

            <ImageView
                android:id="@+id/call_button_switch_call"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/call_button_background_xml"
                app:srcCompat="@mipmap/call_button_icon_switch_call"
                android:text="@string/call_button_switch_call" />

            <ImageView
                android:id="@+id/call_button_end_call"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/call_button_background_xml"
                app:srcCompat="@mipmap/call_button_icon_call_end"
                android:text="@string/call_button_end_call" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
