<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_calling_bg">

        <ImageView
            android:id="@+id/ivAgentPic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_avatar_pic" />

        <kore.botssdk.views.CustomTextViewBold
            android:id="@+id/tvAgentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivAgentPic"
            android:layout_centerInParent="true"
            android:text="@string/agent_name" />

        <LinearLayout
            android:id="@+id/llCallType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAgentName"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_audio_phone"
                android:contentDescription="@string/app_name" />

            <kore.botssdk.views.CustomTextViewBold
                android:id="@+id/tvTypeOfCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incoming_audio_call" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llCallType"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <kore.botssdk.views.CustomTextViewBold
                android:id="@+id/tvCallReject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_call_reject_bg"
                android:gravity="center"
                android:text="@string/decline"
                android:textColor="@color/white" />

            <kore.botssdk.views.CustomTextViewBold
                android:id="@+id/tvCallAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_25dp"
                android:background="@drawable/ic_call_accept_bg"
                android:gravity="center"
                android:text="@string/accept"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>